--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "electron-is-dev": "^2.0.0",
     "google-protobuf": "^3.21.2",
     "hangul-js": "^0.2.6",
-    "node-sass": "^9.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "play-sound": "^1.1.6",
@@ -64,15 +63,15 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "npm run dev:proto && npm run dev:tsc && npm run dev:parallel",
+    "dev": "yarn dev:proto && yarn dev:tsc && yarn dev:parallel",
     "dev:proto": "powershell -ExecutionPolicy Bypass -File scripts/generate_proto.ps1",
     "dev:tsc": "tsc -p tsconfig.electron.json",
-    "dev:parallel": "concurrently \"npm run dev:vite\" \"npm run dev:electron\"",
+    "dev:parallel": "concurrently \"yarn dev:vite\" \"yarn dev:electron\"",
     "dev:vite": "vite --host 0.0.0.0",
     "dev:electron": "wait-on tcp:1624 && electron .",
-    "build": "npm run dev:proto && npm run dev:tsc && vite build",
+    "build": "yarn dev:proto && yarn dev:tsc && vite build",
     "build:electron": "electron-builder",
-    "start": "npm run build && electron ."
+    "start": "yarn build && electron ."
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.6.0",
@@ -86,7 +85,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "electron": "^27.0.2",
+    "electron": "^27.3.11",
     "electron-builder": "^22.11.7",
     "electron-rebuild": "^3.2.9",
     "eslint-config-airbnb": "19.0.4",
