--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,5 +70,10 @@
   "types": [
     "react/next",
     "react-dom/next"
+  ],
+  "include": [
+    "src/**/*",
+    "generated/**/*",
+    "electron.ts"
   ]
 }
